# perceptimg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: policy.json
examples/: README.md  basic_usage.py
perceptimg/: .bandit  __init__.py  __main__.py  _composition.py  api.py  bootstrap.py  cli.py  exceptions.py
perceptimg/adapters/: __init__.py  pil_adapter.py
perceptimg/application/: __init__.py  adapters.py  batch.py  ports.py  presentation.py  runtime.py
perceptimg/core/: analyzer.py  batch.py  checkpoint.py  distributed.py  interfaces.py  metrics.py  metrics_exporter.py  optimizer.py  policy.py  rate_limiter.py  report.py  retry.py  strategy.py
perceptimg/core/batch/: __init__.py  cache.py  config.py  processor.py
perceptimg/engines/: apng_engine.py  avif_engine.py  base.py  heif_engine.py  jxl_engine.py  pillow_engine.py  webp_engine.py
perceptimg/examples/policies/: mobile_aggressive.json  print_preserve_detail.json  web_high_fidelity.json
perceptimg/formats/: __init__.py  apng.py  avif.py  gif.py  heif.py  jpeg.py  jxl.py  png.py  tiff.py  webp.py
perceptimg/perceptimg/: __main__.py
perceptimg/tests/: test_cli_defaults.py  test_cli_policy_flags.py  test_engine_fallback.py  test_engine_priority.py  test_engine_priority_selection.py  test_optimize_bytes_original.py  test_optimize_from_analysis.py  test_optimizer_memory.py
perceptimg/utils/: heuristics.py  image_io.py  logging_config.py  validation.py
tests/: conftest.py  test_additional_coverage.py  test_analyzer.py  test_architecture_boundaries.py  test_batch.py  test_cli_coverage.py  test_cli_default_outputs.py  test_cli_main.py  test_cli_main_default.py  test_cli_main_default_out.py  test_cli_main_entrypoint.py  test_distributed.py  test_engines.py  test_engines_extended.py  test_engines_success.py  test_enterprise.py  test_heuristics_edge_case.py  test_heuristics_line56.py  test_image_io_errors.py  test_logging_and_validation.py  test_logging_formatter.py  test_metrics.py  test_metrics_perceptual_score.py  test_metrics_perceptual_score_zero.py  test_metrics_score.py  test_optimizer.py  test_optimizer_branches.py  test_optimizer_branches_more.py  test_optimizer_errors.py  test_optimizer_no_candidates.py  test_optimizer_no_candidates_path.py  test_optimizer_policy_accepts.py  test_optimizer_policy_reject.py  test_policy.py  test_policy_edge_cases.py  test_policy_from_json_error.py  test_strategy_edge.py  test_strategy_policy_combinations.py  test_utils_and_formats.py  test_utils_edges.py  (+1 more)
